add pwa with workbox config

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Ember MobileHub</title>
-    <meta name="description" content="">
+    <meta name="description" content="An AWS Starter kit for Mobile Hub and Ember.js">
+    <link rel="manifest" href="/manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     {{content-for "head"}}
@@ -12,7 +13,7 @@
     <link rel="stylesheet" href="{{rootURL}}assets/ember-mobilehub-tester.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-
+      
     {{content-for "head-footer"}}
   </head>
   <body>
