--- a/app/index.html
+++ b/app/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html class="mdc-typography">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Ember MobileHub</title>
-    <meta name="description" content="An AWS Starter kit for Mobile Hub and Ember.js">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    {{content-for "head"}}
-    <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link rel="stylesheet" href="{{rootURL}}assets/ember-mobilehub-tester.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-      
-    {{content-for "head-footer"}}
-  </head>
-  <body>
-    {{content-for "body"}}
-    
-    <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/ember-mobilehub-tester.js"></script>
-    {{content-for "body-footer"}}
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Ember MobileHub</title>
+  <meta name="description" content="An AWS Starter kit for Mobile Hub and Ember.js">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> {{content-for "head"}}
+  <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
+  <link rel="stylesheet" href="{{rootURL}}assets/ember-mobilehub-tester.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> {{content-for "head-footer"}}
+</head>
+
+<body>
+  {{content-for "body"}}
+
+
+  <script src="{{rootURL}}assets/vendor.js"></script>
+  <script src="{{rootURL}}assets/ember-mobilehub-tester.js"></script> {{content-for "body-footer"}}
+</body>
+
 </html>
